--- a/app/src/main/res/layout/hadis_main.xml
+++ b/app/src/main/res/layout/hadis_main.xml
@@ -16,50 +16,55 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v4.view.ViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:background="#ffffff">
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:background="#ffffff">
 
     </android.support.v4.view.ViewPager>
 
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/colorPrimary"
-            android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
 
-        <ImageView
-                android:contentDescription="@null"
-                android:id="@+id/left"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/ic_arrow_back_white_24dp"/>
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:contentDescription="@null"
+            android:id="@+id/left"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:materialIcon="arrow_left"
+            app:materialIconColor="#fff"
+            app:materialIconSize="24dp"/>
 
 
         <TextView
-                android:id="@+id/number"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="#ffffff"
-                android:textSize="18sp"/>
+            android:id="@+id/number"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textColor="#ffffff"
+            android:textSize="18sp"/>
 
-        <ImageView
-                android:contentDescription="@null"
-                android:id="@+id/right"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:src="@drawable/ic_arrow_forward_white_24dp"/>
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:contentDescription="@null"
+            android:id="@+id/right"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:materialIcon="arrow_right"
+            app:materialIconColor="#fff"
+            app:materialIconSize="24dp"/>
     </LinearLayout>
 
 </RelativeLayout>
