--- a/app/src/main/res/layout/zikr_main.xml
+++ b/app/src/main/res/layout/zikr_main.xml
@@ -17,139 +17,141 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:background="#e0e0e0"
               android:orientation="vertical">
 
     <EditText
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:background="#00000000"
-            android:hint="@string/newDhikr"
-            android:text="@string/newDhikr"
-            android:textAppearance="?android:attr/textAppearanceLarge"/>
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:background="#00000000"
+        android:hint="@string/newDhikr"
+        android:text="@string/newDhikr"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
     <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_weight="1"
-            android:gravity="center">
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_weight="1"
+        android:gravity="center">
 
         <com.metinkale.prayerapp.zikr.ZikrView
-                android:id="@+id/zikr"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+            android:id="@+id/zikr"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
-        <ImageView
-                android:contentDescription="@null"
-                android:id="@+id/reset"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/zikr"
-                android:layout_alignParentLeft="true"
-                android:layout_margin="10dp"
-                android:tint="#000000"
-                android:src="@drawable/ic_settings_backup_restore_white_36dp"/>
+        <net.steamcrafted.materialiconlib.MaterialIconView
+            android:contentDescription="@null"
+            android:id="@+id/reset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/zikr"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="10dp"
+            app:materialIcon="backup_restore"
+            app:materialIconColor="#000000"
+            app:materialIconSize="36dp"/>
 
         <com.metinkale.prayerapp.vakit.PrefsView
-                android:id="@+id/vibration"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_alignBottom="@id/zikr"
-                android:layout_alignParentRight="true"
-                android:tag="Vibration2"/>
+            android:id="@+id/vibration"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignBottom="@id/zikr"
+            android:layout_alignParentRight="true"
+            android:tag="Vibration2"/>
 
     </RelativeLayout>
 
     <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="0.1"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"/>
 
     <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp">
 
         <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <View
-                    android:id="@+id/sound"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#00bcd4"
-                    android:onClick="changeColor"
-                    android:tag="#00bcd4"/>
+                android:id="@+id/sound"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#00bcd4"
+                android:onClick="changeColor"
+                android:tag="#00bcd4"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#ffc107"
-                    android:onClick="changeColor"
-                    android:tag="#ffc107"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#ffc107"
+                android:onClick="changeColor"
+                android:tag="#ffc107"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#e51c23"
-                    android:onClick="changeColor"
-                    android:tag="#e51c23"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#e51c23"
+                android:onClick="changeColor"
+                android:tag="#e51c23"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#259b24"
-                    android:onClick="changeColor"
-                    android:tag="#259b24"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#259b24"
+                android:onClick="changeColor"
+                android:tag="#259b24"/>
         </TableRow>
 
         <TableRow
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <View
-                    android:id="@+id/button5"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#795548"
-                    android:onClick="changeColor"
-                    android:tag="#795548"/>
+                android:id="@+id/button5"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#795548"
+                android:onClick="changeColor"
+                android:tag="#795548"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#9c27b0"
-                    android:onClick="changeColor"
-                    android:tag="#903AE8"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#9c27b0"
+                android:onClick="changeColor"
+                android:tag="#903AE8"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#e91e63"
-                    android:onClick="changeColor"
-                    android:tag="#e91e63"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#e91e63"
+                android:onClick="changeColor"
+                android:tag="#e91e63"/>
 
             <View
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp"
-                    android:background="#ffeb3b"
-                    android:onClick="changeColor"
-                    android:tag="#ffeb3b"/>
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_margin="5dp"
+                android:background="#ffeb3b"
+                android:onClick="changeColor"
+                android:tag="#ffeb3b"/>
         </TableRow>
     </TableLayout>
 
