--- a/app/src/main/res/layout/compass_map.xml
+++ b/app/src/main/res/layout/compass_map.xml
@@ -15,16 +15,12 @@
   -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/tools"
-                xmlns:mapbox="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    xmlns:app="http://schemas.android.com/tools"
+    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <com.mapbox.mapboxsdk.maps.MapView
-        android:id="@+id/mapview"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        mapbox:style_url="mapbox://styles/mapbox/satellite-streets-v9"/>
+    <include layout="@layout/compass_mapview" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/myLocationButton"
@@ -32,14 +28,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_marginBottom="20dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:src="@drawable/ic_gps"
-        app:borderWidth="0dp"
         app:backgroundTint="#ff0000"
+        app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
-        app:pressedTranslationZ="12dp"
-        android:layout_marginRight="20dp"
-        android:layout_alignParentRight="true"/>
+        app:pressedTranslationZ="12dp" />
 </RelativeLayout>
