--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,6 +30,7 @@
         <item name="android:textColor">#ff000000</item>
         <item name="android:windowBackground">@color/background</item>
         <item name="actionOverflowMenuStyle">@style/ToolbarTheme.Popup</item>
+        <item name="materialIconColor">#ffffff</item>
 
     </style>
 
