--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2016 Metin Kale
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,8 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory
-        android:title="@string/appName">
+    <PreferenceCategory android:title="@string/appName">
 
 
         <ListPreference
@@ -26,16 +24,16 @@
             android:entries="@array/language"
             android:entryValues="@array/language_val"
             android:key="language"
-            android:title="@string/language"/>
+            android:title="@string/language" />
         <SwitchPreference
             android:key="arabicNames"
-            android:title="@string/useArabicNames"/>
+            android:title="@string/useArabicNames" />
 
         <ListPreference
             android:entries="@array/numbers"
             android:entryValues="@array/numbers_keys"
             android:key="numbers"
-            android:title="@string/numbers"/>
+            android:title="@string/numbers" />
 
 
         <ListPreference
@@ -44,76 +42,71 @@
             android:entries="@array/widget_countdown"
             android:entryValues="@array/widget_countdown_"
             android:key="widget_countdown"
-            android:title="@string/widgetCountdownType"/>
+            android:title="@string/widgetCountdownType" />
 
         <com.metinkale.prayerapp.calendar.CalendarPreference
             android:defaultValue="1"
             android:key="calendarIntegration"
-            android:title="@string/calendarIntegration"/>
+            android:title="@string/calendarIntegration" />
 
-        <PreferenceScreen
-            android:title="@string/kerahatDuration">
-            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
-                xmlns:vnt="http://schemas.android.com/apk/res-auto"
+        <PreferenceScreen android:title="@string/kerahatDuration">
+            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference xmlns:vnt="http://schemas.android.com/apk/res-auto"
                 android:defaultValue="45"
                 android:key="kerahat_sunrise"
                 android:title="@string/kerahatSun"
                 vnt:vnt_maxValue="120"
                 vnt:vnt_minValue="0"
-                vnt:vnt_setWrapSelectorWheel="false"/>
+                vnt:vnt_setWrapSelectorWheel="false" />
 
-            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
-                xmlns:vnt="http://schemas.android.com/apk/res-auto"
+            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference xmlns:vnt="http://schemas.android.com/apk/res-auto"
                 android:defaultValue="45"
                 android:key="kerahat_istiva"
                 android:title="@string/kerahatIstiwa"
                 vnt:vnt_maxValue="120"
                 vnt:vnt_minValue="0"
-                vnt:vnt_setWrapSelectorWheel="false"/>
+                vnt:vnt_setWrapSelectorWheel="false" />
 
 
-            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference
-                xmlns:vnt="http://schemas.android.com/apk/res-auto"
+            <com.vanniktech.vntnumberpickerpreference.VNTNumberPickerPreference xmlns:vnt="http://schemas.android.com/apk/res-auto"
                 android:defaultValue="45"
                 android:key="kerahat_sunset"
                 android:title="@string/kerahatMaghrib"
                 vnt:vnt_maxValue="120"
                 vnt:vnt_minValue="0"
-                vnt:vnt_setWrapSelectorWheel="false"/>
+                vnt:vnt_setWrapSelectorWheel="false" />
 
 
         </PreferenceScreen>
 
         <ListPreference
             android:defaultValue="current"
-            android:key="vakit_indicator"
-            android:title="@string/vakit_indicator"
             android:dialogTitle="@string/vakit_indicator"
+            android:entries="@array/vakit_indicator"
             android:entryValues="@array/vakit_indicator_values"
-            android:entries="@array/vakit_indicator"/>
+            android:key="vakit_indicator"
+            android:title="@string/vakit_indicator" />
 
     </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="@string/dateAndTime">
+    <PreferenceCategory android:title="@string/dateAndTime">
 
 
         <SwitchPreference
             android:key="use12h"
-            android:title="@string/use12h"/>
+            android:title="@string/use12h" />
         <ListPreference
             android:dialogTitle="@string/dateFormat"
             android:entries="@array/greg_text"
             android:entryValues="@array/df"
             android:key="dateformat"
-            android:title="@string/dateFormat"/>
+            android:title="@string/dateFormat" />
 
         <ListPreference
             android:dialogTitle="@string/hdateFormat"
             android:entries="@array/hicri_text"
             android:entryValues="@array/df"
             android:key="hdateformat"
-            android:title="@string/hdateFormat"/>
+            android:title="@string/hdateFormat" />
 
 
         <ListPreference
@@ -121,33 +114,32 @@
             android:entries="@array/hijri_fix_days"
             android:entryValues="@array/hijri_fix_days"
             android:key="hijri_fix"
-            android:title="@string/hijriFix"/>
+            android:title="@string/hijriFix" />
     </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="@string/notification">
+    <PreferenceCategory android:title="@string/notification">
         <com.metinkale.prayerapp.utils.VibrationPreference
             android:defaultValue="0 300 150 300 150 500"
             android:dialogTitle="@string/vibrationDesc"
             android:key="vibration"
-            android:title="@string/vibrationPattern"/>
+            android:title="@string/vibrationPattern" />
 
 
         <SwitchPreference
             android:defaultValue="true"
             android:key="ongoingIcon"
-            android:title="@string/ongoingIcon"/>
+            android:title="@string/ongoingIcon" />
 
         <SwitchPreference
             android:defaultValue="false"
-            android:key="ongoingNumber"
             android:dependency="ongoingIcon"
-            android:title="@string/ongoingNumber"/>
+            android:key="ongoingNumber"
+            android:title="@string/ongoingNumber" />
 
         <SwitchPreference
             android:defaultValue="true"
             android:key="alternativeOngoing"
-            android:title="@string/alternativeOngoing"/>
+            android:title="@string/alternativeOngoing" />
 
         <ListPreference
             android:defaultValue="noti"
@@ -155,41 +147,46 @@
             android:entries="@array/ezan_volume"
             android:entryValues="@array/ezan_volume_val"
             android:key="ezanvolume"
-            android:title="@string/adhanVolume"/>
+            android:title="@string/adhanVolume" />
         <ListPreference
             android:defaultValue="silent"
             android:dialogTitle="@string/silenterType"
             android:entries="@array/silenterType"
             android:entryValues="@array/silenterType_val"
             android:key="silenterType"
-            android:title="@string/silenterType"/>
+            android:title="@string/silenterType" />
 
 
         <SwitchPreference
             android:defaultValue="false"
             android:key="autoRemoveNotification"
-            android:title="@string/autoremove_notification"/>
+            android:title="@string/autoremove_notification" />
 
         <SwitchPreference
             android:defaultValue="true"
             android:key="notificationScreen"
-            android:title="@string/show_notification_screen"/>
+            android:title="@string/show_notification_screen" />
 
         <SwitchPreference
             android:defaultValue="false"
             android:key="useAlarm"
-            android:title="@string/useAlarm"
-            android:summary="@string/useAlarmDesc"/>
+            android:summary="@string/useAlarmDesc"
+            android:title="@string/useAlarm" />
 
     </PreferenceCategory>
 
 
-    <PreferenceCategory
-        android:title="@string/other">
+    <PreferenceCategory android:title="@string/other">
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="useOSM"
+            android:title="@string/useOSMGeocoder" />
+
 
         <Preference
             android:key="backupRestore"
-            android:title="@string/backupRestore"/>
+            android:title="@string/backupRestore" />
 
     </PreferenceCategory>
 </PreferenceScreen>
