option to Stop Athan by turning the device screen face down #60

--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -167,6 +167,13 @@
             android:key="notificationScreen"
             android:title="@string/show_notification_screen" />
 
+
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="stopFacedown"
+            android:title="@string/stopFacedown" />
+
+
         <SwitchPreference
             android:defaultValue="false"
             android:key="useAlarm"
