--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -76,6 +76,7 @@
         <item>Türkçe</item>
         <item>Deutsch</item>
         <item>English</item>
+        <item>Nederlands</item>
         <item>Français</item>
         <item>Kurdish</item>
         <item>عربي</item>
@@ -87,6 +88,7 @@
         <item>tr</item>
         <item>de</item>
         <item>en</item>
+        <item>nl</item>
         <item>fr</item>
         <item>ku</item>
         <item>ar</item>
